Added Lecture on Interferene

--- a/lectures/interference_dynamics.tex
+++ b/lectures/interference_dynamics.tex
@@ -773,29 +773,19 @@
 \end{frame}
 
 
-\begin{frame}{Example 2: Sraer \& Thesmar (2020)}
+\begin{frame}{Final thought: Dynamics}
 \begin{columns}[T] % align columns
   \begin{column}{.5\textwidth}
     \begin{wideitemize}
-    \item Use cross-firm experiment to influence the allocation of credit
-    \item Some firms got lots more credit! Some did not
-    \item How to aggregate up this affect? E.g. the policy effect is
-      estimated by differencing the impact of the change on those who
-      were more directly exposed vs. not -- however, this doesn't tell
-      us about the aggregate impact on the economy
-    \item The paper argues, using ecnoomic theory, that these issues can be safely ignored under certain assumptions
-    \item Back to a version of SUTVA!
+    \item How to think about treatments staggered \emph{in time}?
+    \item We have a vector of outcomes over time -- what effects can we identify treatments on? What restrictions do we need to make?
+    \item Consider the mRNA Covid Vaccine trials -- what assumptions do we need to identify the effect of just one dose?
     \end{wideitemize}
   \end{column}%
   \hfill%
   \begin{column}{.5\textwidth}
     \begin{center}
-      \only<1>{
-        \includegraphics[width=\linewidth]{images/sraer0.png}
-        }
-      \only<2>{
-        \includegraphics[width=\linewidth]{images/sraer1.png}
-        }
+        \includegraphics[width=\linewidth]{images/vaccine_dynamics.png}
     \end{center}
   \end{column}
 \end{columns}
