Added Lecture on Interferene

--- a/lectures/interference_dynamics.tex
+++ b/lectures/interference_dynamics.tex
@@ -777,7 +777,10 @@
 \begin{columns}[T] % align columns
   \begin{column}{.5\textwidth}
     \begin{wideitemize}
-    \item How to think about treatments staggered \emph{in time}?
+    \item How to think about treatments staggered \emph{in time}? E.g. $\mathbf{Y}_{i} = (Y_{i1}, \ldots, Y_{iT})$
+      \begin{itemize}
+      \item What is the potential outcome? $Y_{it}(D_{it})$?  $Y_{it}(D_{it}, D_{it-1})$? 
+      \end{itemize}
     \item We have a vector of outcomes over time -- what effects can we identify treatments on? What restrictions do we need to make?
     \item Consider the mRNA Covid Vaccine trials -- what assumptions do we need to identify the effect of just one dose?
     \end{wideitemize}
