Added Lecture on Interferene

--- a/lectures/interference_dynamics.tex
+++ b/lectures/interference_dynamics.tex
@@ -753,7 +753,7 @@
       estimated by differencing the impact of the change on those who
       were more directly exposed vs. not -- however, this doesn't tell
       us about the aggregate impact on the economy
-    \item The paper argues, using ecnoomic theory, that these issues can be safely ignored under certain assumptions
+    \item The paper argues, using economic theory, that these issues can be safely ignored under certain assumptions
     \item Back to a version of SUTVA!
     \end{wideitemize}
   \end{column}%
