Added Lecture on Interferene

--- a/lectures/interference_dynamics.tex
+++ b/lectures/interference_dynamics.tex
@@ -249,7 +249,7 @@
     \end{enumerate}
     When might we do that?
     \vspace{-7pt}
-  \item The choice of approximating the effect of $D$ on $Y$ wtih a particular functional form can come from many places:
+  \item The choice of approximating the effect of $D$ on $Y$ with a particular functional form can come from many places:
     \begin{enumerate}
     \item Data limitations: a linear model will be more accurately estimated (subject to the caveat that the functional form is right!)
     \item External validity: You may want to consider values of $d$
@@ -629,7 +629,7 @@
     \end{wideitemize}
 \end{frame}
 
-\begin{frame}{Two papers in this space - Athey, Eckles, and Athey (2018)}
+\begin{frame}{Two papers in this space - Athey, Eckles, and Imbens (2018)}
   \begin{wideitemize}
   \item This is a paper about null hypothesis tests under networks
   \item Key feature that this paper adds: testing specific types of analysis by creating ``artificial'' experiments
