Add Bincatter Lecture

--- a/lectures/regression_2.tex
+++ b/lectures/regression_2.tex
@@ -566,6 +566,7 @@ Chetty et al. (2011) - Kindergarten scores on adult earnings
         \end{itemize}
       \item We actually see a noticeable dip across income -- maybe
         driven by Medicaid eligibility thresholds?
+      \item Code for this is all available here: \url{https://nppackages.github.io/binsreg/}
   \end{wideitemize}
   \end{column}%
   \hfill%
